--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div id="content">
 
 				<div id="header">
-					<div id="logo"><img src="img/logo_vuletech_web.png" alt="Vule tech" /></div>
+					<div id="logo"><img src="img/vuletech_logo_web.png" alt="Vule tech" /></div>
 					<div id="slogan"><h3>Test export data into website</h3></div>
 				</div><!--#header-->
 
