--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi">
+<!-----------------------------------------------Head--------------------------------------------------------------------------->
 	<head>
 		<meta charset="utf-8" />
 		<title>DMI-Vule</title>
@@ -10,7 +11,9 @@
 		<link type="text/css" rel="stylesheet" href="normalize.css" />
 		<script src='Chart.min.js'></script>
 	</head>
+<!-----------------------------------------------Body--------------------------------------------------------------------------->	
 	<body>
+<!-----------------------------------------------Container---------------------------------------------------------------------->		
 		<div id="container">
 
 			<div id="menu">
@@ -30,6 +33,9 @@
 					<div id="logo"><img src="img/vuletech_logo_web.png" alt="Vule tech" /></div>
 					<div id="slogan"><h3>Test export data into website</h3></div>
 				</div><!--#header-->
+				
+<!-----------------------------------------------Chart-------------------------------------------------------------------------->				
+
 <canvas id="buyers" width="920" height="200"></canvas>
 <script>
 // line chart data
@@ -50,13 +56,15 @@
 
 </script>
 
+<!-----------------------------------------------Description--------------------------------------------------------------------->
+				
 				<div class="call-to-action">
 					<h3>text 1</h3>
 
 					<p>Text 2</p>
 				</div><!--.call-to-action-->
 
-				<div class="row">
+					<div class="row">
 					<div id="box1" class="col">
 						<h2>information 1</h2>
 						<img src="img/css-icon.png" alt="CSS" />
@@ -72,9 +80,11 @@
 						<img src="img/html-icon.png" alt="HTML" />
 						<p>Dscription 3</p>
 					</div>
-				</div><!--.call-to-action-->
+					</div><!--.call-to-action-->
 
-			</div><!--#content-->
+				</div><!--#content-->
+
+<!-----------------------------------------------Footer------------------------------------------------------------------------->
 
 			<div id="footer">
 				<p>lien ket web vuletech.com</p>
